--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,5 +29,5 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.6.8
         with:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          heroku_app_name: ""
-          heroku_email: ""
+          heroku_app_name: "tranquil-mountain-33470"
+          heroku_email: "marco.condor1@unmsm.edu.pe"
